--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-18
+android.library.reference.1=../../../git/android-viewbadger
+android.library.reference.2=../../../git/android-autofittextview/library/src/main
