--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-18
 android.library.reference.1=../../../Downloads/android-swipelistview-master/swipelistview/src/main
 android.library.reference.2=../EdbertLibrary
+android.library.reference.3=../../../../../Applications/adt-bundle-mac-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
