--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="swipe.android.nearlings.MainActivity"
+            
+        android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
