--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+              <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyA5rUkHtoPSD-gXCIvxDdlsWMDdQcVIB6s
+" /> <uses-library android:name="com.google.android.maps" />
         <activity
             android:name="swipe.android.nearlings.MainActivity"
             
