--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
+ <uses-permission android:name="android.permission.INTERNET"/>
+ 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
@@ -24,27 +24,36 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-              <meta-data
+        android:theme="@style/Theme.AppCompat.Light" >
+        <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyA5rUkHtoPSD-gXCIvxDdlsWMDdQcVIB6s
-" /> <uses-library android:name="com.google.android.maps" />
+" />
+
+        <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:name="swipe.android.nearlings.MainActivity"
-            
-        android:screenOrientation="portrait"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="swipe.android.nearlings.NeedsDetailsActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="swipe.android.nearlings.LoginActivity"
+            android:screenOrientation="portrait" >
+        </activity>
 
-        <!-- Register the Broadcast service -->
         <service
             android:name=".sync.NearlingsSyncService"
             android:exported="true" >
@@ -74,6 +83,8 @@
             android:exported="false"
             android:syncable="true" >
         </provider>
-    </application>
-
+     </application>
+      <meta-data android:name="com.crashlytics.ApiKey" android:value="8553c9eeaaf67ce6f513e36c6cd30df3176d0664"/>
+    
+    
 </manifest>
