Login and Logout implemented

--- a/assets/crashlytics-build.properties
+++ b/assets/crashlytics-build.properties
@@ -3,9 +3,9 @@
 #
 #Do NOT modify, delete, or commit to source control!
 #
-#Mon Oct 27 12:02:18 PDT 2014
+#Thu Nov 06 12:29:39 PST 2014
 version_name=1.0
 package_name=swipe.android.nearlings
-build_id=604f6cb0-3041-4a67-8074-b612d481cc9a
+build_id=4b5acb54-e8b3-44dc-bdec-9bd40f5a2fa9
 version_code=1
 app_name=Nearlings
