--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
- <uses-permission android:name="android.permission.INTERNET"/>
- 
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
@@ -25,6 +25,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light" >
+        
+    <meta-data
+        android:name="com.crashlytics.ApiKey"
+        android:value="8553c9eeaaf67ce6f513e36c6cd30df3176d0664" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -83,8 +87,7 @@
             android:exported="false"
             android:syncable="true" >
         </provider>
-     </application>
-      <meta-data android:name="com.crashlytics.ApiKey" android:value="8553c9eeaaf67ce6f513e36c6cd30df3176d0664"/>
-    
-    
+    </application>
+
+
 </manifest>
