--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,7 +57,10 @@
             android:name="swipe.android.nearlings.LoginActivity"
             android:screenOrientation="portrait" >
         </activity>
-
+  <activity
+            android:name="swipe.android.nearlings.SearchActivity"
+            android:screenOrientation="portrait" >
+        </activity>
         <service
             android:name=".sync.NearlingsSyncService"
             android:exported="true" >
