Test build for Thursday

--- a/project.properties
+++ b/project.properties
@@ -18,3 +18,5 @@ android.library.reference.3=../../../git/Android-HorizontalListView/AndroidHoriz
 android.library.reference.4=../appcompat_v7
 android.library.reference.5=../../../git/android-viewbadger
 android.library.reference.6=../EdbertLibrary
+android.library.reference.7=../../../git/editTextXbutton
+android.library.reference.8=../../../git/DeletableEditText
