--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="14" />
+ <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -25,10 +27,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light" >
-        
-    <meta-data
-        android:name="com.crashlytics.ApiKey"
-        android:value="8553c9eeaaf67ce6f513e36c6cd30df3176d0664" />
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="8553c9eeaaf67ce6f513e36c6cd30df3176d0664" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -57,10 +58,16 @@
             android:name="swipe.android.nearlings.LoginActivity"
             android:screenOrientation="portrait" >
         </activity>
-  <activity
+        <activity
             android:name="swipe.android.nearlings.SearchActivity"
             android:screenOrientation="portrait" >
         </activity>
+         <activity
+            android:name="swipe.android.nearlings.CreateEventActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        
+
         <service
             android:name=".sync.NearlingsSyncService"
             android:exported="true" >
@@ -91,6 +98,5 @@
             android:syncable="true" >
         </provider>
     </application>
-
 
 </manifest>
