--- a/project.properties
+++ b/project.properties
@@ -13,12 +13,10 @@
 # Project target.
 target=android-17
 android.library.reference.1=../../../../../Applications/adt-bundle-mac-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.2=../../../git/Android-HorizontalListView/AndroidHorizontalListView
-android.library.reference.3=../appcompat_v7
-android.library.reference.4=../../../git/android-viewbadger
-android.library.reference.5=../EdbertLibrary
-android.library.reference.6=../../../git/DeletableEditText
-android.library.reference.7=../../../git/android-autofittextview/library/src/main
-android.library.reference.8=../../../git/NineOldAndroids/library
-android.library.reference.9=../../../git/android-swipelistview/swipelistview/src/main
-android.library.reference.10=../../../git/datetimepicker/datetimepicker-library
+android.library.reference.2=../../Downloads/Booksmart Files/android-support-v7-appcompat
+android.library.reference.3=../android-viewbadger
+android.library.reference.4=../../Documents/Nearlings/EdbertLibrary
+android.library.reference.5=../datetimepicker/datetimepicker-library
+android.library.reference.6=../Android-HorizontalListView/AndroidHorizontalListView
+android.library.reference.7=../android-swipelistview/swipelistview/src/main
+android.library.reference.8=../DeletableEditText
