--- a/project.properties
+++ b/project.properties
@@ -20,3 +20,4 @@ android.library.reference.5=../datetimepicker/datetimepicker-library
 android.library.reference.6=../Android-HorizontalListView/AndroidHorizontalListView
 android.library.reference.7=../android-swipelistview/swipelistview/src/main
 android.library.reference.8=../DeletableEditText
+android.library.reference.9=../cwac-endless/endless
