Added more styling and replaced icons.

--- a/project.properties
+++ b/project.properties
@@ -21,3 +21,4 @@ android.library.reference.6=../Android-HorizontalListView/AndroidHorizontalListV
 android.library.reference.7=../android-swipelistview/swipelistview/src/main
 android.library.reference.8=../DeletableEditText
 android.library.reference.9=../cwac-endless/endless
+android.library.reference.10=../android-ago/android-ago
