--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,9 +24,9 @@
     <application
         android:name=".NearlingsApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/nearlings_32x_icon"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light" >
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.crashlytics.ApiKey"
             android:value="8553c9eeaaf67ce6f513e36c6cd30df3176d0664" />
