--- a/project.properties
+++ b/project.properties
@@ -22,3 +22,4 @@ android.library.reference.7=../android-swipelistview/swipelistview/src/main
 android.library.reference.8=../DeletableEditText
 android.library.reference.9=../cwac-endless/endless
 android.library.reference.10=../android-ago/android-ago
+android.library.reference.11=../Android-Dashboard/android-Dashboard
