Nearlings temp comit

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,6 +82,11 @@
             android:name="swipe.android.nearlings.CreateGroupActivity"
             android:screenOrientation="portrait" >
         </activity>
+     <activity
+            android:name="swipe.android.nearlings.EventsDetailsActivity"
+            android:screenOrientation="portrait" >
+        </activity>    
+ 
         <service
             android:name=".sync.NearlingsSyncService"
             android:exported="true" >
