--- a/project.properties
+++ b/project.properties
@@ -12,13 +12,12 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../../../../Applications/adt-bundle-mac-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.2=../../Downloads/Booksmart Files/android-support-v7-appcompat
-android.library.reference.3=../../Documents/Nearlings/EdbertLibrary
-android.library.reference.4=../datetimepicker/datetimepicker-library
-android.library.reference.5=../Android-HorizontalListView/AndroidHorizontalListView
-android.library.reference.6=../android-swipelistview/swipelistview/src/main
-android.library.reference.7=../DeletableEditText
-android.library.reference.8=../android-ago/android-ago
-android.library.reference.9=../Android-Dashboard/android-Dashboard
-android.library.reference.10=../cwac-endless/endless
+android.library.reference.1=..\\..\\Documents\\Nearlings\\EdbertLibrary
+android.library.reference.2=..\\datetimepicker\\datetimepicker-library
+android.library.reference.3=..\\Android-HorizontalListView\\AndroidHorizontalListView
+android.library.reference.4=..\\DeletableEditText
+android.library.reference.5=..\\android-ago\\android-ago
+android.library.reference.6=..\\Android-Dashboard\\android-Dashboard
+android.library.reference.7=..\\android-swipelistview\\swipelistview\\src\\main
+android.library.reference.8=..\\..\\Documents\\Nearlings\\google-play-services_lib
+android.library.reference.9=../cwac-endless/endless
