--- a/project.properties
+++ b/project.properties
@@ -22,3 +22,4 @@ android.library.reference.7=../DeletableEditText
 android.library.reference.8=../android-ago/android-ago
 android.library.reference.9=../Android-Dashboard/android-Dashboard
 android.library.reference.10=../cwac-endless/endless
+android.library.reference.11=../../Documents/Nearlings/mg-library-android
