--- a/project.properties
+++ b/project.properties
@@ -25,3 +25,5 @@ android.library.reference.9=../Android-Dashboard/android-Dashboard
 android.library.reference.10=../cwac-endless/endless
 android.library.reference.11=../../Documents/Nearlings/mg-library-android
 
+android.library.reference.12=../../../../Applications/android sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.13=../droidparts/droidparts
